Fix SVG logos display on Firefox

--- a/_sass/ui-componants/_sponsors.scss
+++ b/_sass/ui-componants/_sponsors.scss
@@ -46,6 +46,7 @@ figure.company {
   }
   a {
     display: block;
+    flex:auto;
   }
 }
 
